# alg-test-android

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/ru/michaelilyin/alg/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  cl_test.cpp  cl_test.h  native-lib.cpp
app/src/main/java/ru/michaelilyin/alg/: ArrayComputation.java  CLUtils.java  MainActivity.java  MainActivityFragment.java
app/src/main/java/ru/michaelilyin/alg1/: CLUtils.java  MainActivity.java
app/src/main/res/: gauss_5x5.cl
app/src/main/res/layout/: activity_main.xml  content_main.xml  fragment_main.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: strings.xml
app/src/main/rs/: gauss_for_5x5.rs
app/src/test/java/ru/michaelilyin/alg/: ExampleUnitTest.java
app/src/test/java/ru/michaelilyin/alg1/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
